# osm-pbf

./: .gitignore  AGENTS.md  Cargo.toml  README.md
proto/: Cargo.toml  build.rs  update-git-subtree.sh
proto/src/: elements.rs  lib.rs  primitives.rs
reader/: Cargo.toml
reader/src/: blob.rs  blobs.rs  buf_pool.rs  data.rs  error.rs  header.rs  lib.rs  raw_blob.rs
reader/src/data/: changeset.rs  mod.rs  primitive.rs
