[package]
name = "osm-pbf-proto"
version = "0.1.0-alpha.4"
description = "OpenStreetMap PBF-Format data-structures"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["osm", "openstreetmaps", "pbf", "protobuf", "osm-pbf"]
readme = "README.md"

[dependencies]
protobuf = { version = "3.3.0", features = ["with-bytes"] }
bytes = { version = "1.5", features = ["std"] }
bitflags = "2.4"

[build-dependencies]
protobuf-codegen = "3.3.0"
