[package]
name = "osm-pbf-proto"
version = "0.1.1"
description = "OpenStreetMap PBF-Format data-structures"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["osm", "openstreetmaps", "pbf", "protobuf", "osm-pbf"]
readme = "README.md"

[dependencies]
protobuf = { version = "3.7.2", features = ["with-bytes"] }
bytes = { version = "1.11", features = ["std"] }
bitflags = "2.11"

[build-dependencies]
protobuf-codegen = "3.7.2"
