[package]
name = "osm-pbf-proto"
version = "0.1.1"
description = "OpenStreetMap PBF-Format data-structures"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["osm", "openstreetmaps", "pbf", "protobuf", "osm-pbf"]
readme = "README.md"

[dependencies]
bitflags = "2.11.0"
protobuf = "4.34.0-release"

[build-dependencies]
protoc-prebuilt = "0.3.0"
