[package]
name = "osm-pbf-reader"
version = "0.1.0"
description = "OpenStreetMap PBF reader"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["osm", "openstreetmaps", "pbf", "osm-pbf"]
readme = "README.md"

[features]
default = ["zlib-ng-compat", "lzma"]
zlib = ["flate2/zlib"]
zlib-ng-compat = ["zlib", "flate2/zlib-ng-compat"]
lzma = ["xz2"]

[dependencies]
osm-pbf-proto = { version = "0.1.0", path = "../proto" }
bytes = { version = "1.5", features = ["std"] }
flate2 = { version = "1.0", default-features = false }
xz2 = { version = "0.1", optional = true }
byteorder = "1.5"
thiserror = "1.0"
